--- a/index.html
+++ b/index.html
@@ -21,24 +21,30 @@
         <!-- header starts -->
         <div class="header">
             <!-- header-area starts -->
-            <div class="header-area">
+            <div class="header-area d-flex align-items-end">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
-                            <div class="header-social-icons">
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
+                        <div class="col order-2 order-lg-0">
+                            <div class="d-none d-lg-block">
+                                <div class="d-flex align-items-center h-100">
+                                    <div class="header-social-icons">
+                                        <a href="#"><i class="fa fa-instagram"></i></a>
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="site-logo text-center">
+                        <div class="col order-1">
+                            <div class="site-logo m-height text-center">
                                 <a href="#"><img src="img/logo.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="header-phone-number text-right">
-                                <a href="tel:01493750375"><span><i class="fa fa-phone"></i></span> 01493 750375</a>
+                        <div class="col order-0 order-lg-2">
+                            <div class="d-flex align-items-center justify-content-start justify-content-lg-end h-100">
+                                <div class="header-phone-number">
+                                    <a href="tel:01493750375"><span class="phone-icon"><i class="fa fa-phone"></i></span> <span class="d-none d-lg-block">01493 750375</span></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -47,9 +53,14 @@
             <!-- mainmenu-area starts -->
             <div class="mainmenu-area">
                 <div class="container">
-                    <div class="row justify-content-center">
+                    <div class="row">
                         <div class="col">
                             <div class="mainmenu text-center">
+                                <div class="small-logo d-flex align-items-center">
+                                    <div class="small-logo-inner">
+                                        <a href="#"><img src="img/logo.png" alt=""></a>
+                                    </div>
+                                </div>
                                 <ul id="menu">
                                     <li><a href="#">Used Cars</a></li>
                                     <li><a href="#">Used Caravans</a>
@@ -82,6 +93,8 @@
         </div>
         <!-- header ends -->
 
+        <div class="spacer d-block d-lg-none"></div>
+
         <!-- homepage-slider-area starts -->
         <div class="homepage-slider-area">
             <div class="owl-carousel homepage-slides">
@@ -89,7 +102,7 @@
                 <div class="single-slide-item position-relative" style="background-image: url(./img/slide-bg-1.jpg);">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6 my-auto">
+                            <div class="col-md-8 col-lg-6 my-auto">
                                 <div class="slide-text fade-down">
                                     <h2>New cars arriving weekly</h2>
                                     <p>Part-exchange options available, huge savings from a trusted dealer.</p>
@@ -105,7 +118,7 @@
                 <div class="single-slide-item position-relative" style="background-image: url(./img/slide-bg-1.jpg);">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6 my-auto">
+                            <div class="col-md-8 col-lg-6 my-auto">
                                 <div class="slide-text fade-down">
                                     <h2>New cars arriving weekly</h2>
                                     <p>Part-exchange options available, huge savings from a trusted dealer.</p>
@@ -192,7 +205,7 @@
                             </div><!-- single-select-dropdown ends -->
                         </div><!-- select-dropdowns ends -->
                         <!-- search-content starts -->
-                        <div class="search-content d-flex justify-content-between">
+                        <div class="search-content d-flex justify-content-between flex-wrap flex-xl-nowrap">
                             <div class="finance-range-slider-1">
                                 <div class="range-slider">
                                     <div class="slider-labels position-relative">
@@ -332,7 +345,9 @@
                         <div class="owl-carousel featured-wrap">
                             <!-- single-featured-item starts -->
                             <div class="single-featured-item">
-                                <img src="img/featured-image-1.jpg" alt="">
+                                <div class="car-photo">
+                                    <img src="img/244x183.jpg" alt="">
+                                </div>
                                 <h4>Ford Fiesta Tdci Zetec </h4>
                                 <span class="featured-price">£3,495	</span>
                                 <div class="price-per-month d-flex">
@@ -348,7 +363,9 @@
                             </div><!-- single-featured-item ends -->
                             <!-- single-featured-item starts -->
                             <div class="single-featured-item">
-                                <img src="img/featured-image-2.jpg" alt="">
+                                <div class="car-photo">
+                                    <img src="img/244x183.jpg" alt="">
+                                </div>
                                 <h4>Ford Fiesta Tdci Zetec </h4>
                                 <span class="featured-price">£3,495	</span>
                                 <div class="price-per-month d-flex">
@@ -364,7 +381,9 @@
                             </div><!-- single-featured-item ends -->
                             <!-- single-featured-item starts -->
                             <div class="single-featured-item">
-                                <img src="img/featured-image-3.jpg" alt="">
+                                <div class="car-photo">
+                                    <img src="img/244x183.jpg" alt="">
+                                </div>
                                 <h4>Ford Fiesta Tdci Zetec </h4>
                                 <span class="featured-price">£3,495	</span>
                                 <div class="price-per-month d-flex">
@@ -380,7 +399,9 @@
                             </div><!-- single-featured-item ends -->
                             <!-- single-featured-item starts -->
                             <div class="single-featured-item">
-                                <img src="img/featured-image-4.jpg" alt="">
+                                <div class="car-photo">
+                                    <img src="img/244x183.jpg" alt="">
+                                </div>
                                 <h4>Ford Fiesta Tdci Zetec </h4>
                                 <span class="featured-price">£3,495	</span>
                                 <div class="price-per-month d-flex">
@@ -396,7 +417,9 @@
                             </div><!-- single-featured-item ends -->
                             <!-- single-featured-item starts -->
                             <div class="single-featured-item">
-                                <img src="img/featured-image-3.jpg" alt="">
+                                <div class="car-photo">
+                                    <img src="img/244x183.jpg" alt="">
+                                </div>
                                 <h4>Ford Fiesta Tdci Zetec </h4>
                                 <span class="featured-price">£3,495	</span>
                                 <div class="price-per-month d-flex ">
@@ -490,7 +513,7 @@
                             </div>
                         </div><!-- finance-category-wrap ends -->
                         <!-- finance-logo-wrap starts -->
-                        <div class="finance-logo-wrap d-flex justify-content-between">
+                        <div class="finance-logo-wrap d-flex justify-content-around justify-content-lg-between">
                             <div class="single-finance-logo">
                                 <img src="img/finance-logo-1.png" alt="">
                             </div>
@@ -513,7 +536,7 @@
                 <div class="row">
                     <div class="col">
                         <!-- about-section-wrap starts -->
-                        <div class="about-section-wrap d-flex">
+                        <div class="about-section-wrap d-flex flex-wrap flex-lg-nowrap">
                             <div class="about-section-left" style="background-image: url(./img/about-banner.jpg);">
                                 <!-- <img src="img/about-banner.jpg" alt=""> -->
                             </div>
@@ -529,7 +552,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="d-flex">
+                        <div class="d-flex flex-wrap flex-lg-nowrap">
                             <!-- group-reviews-section starts -->
                             <div class="group-reviews-section w-50">
                                 <div class="reviews-logo-section d-flex">
@@ -695,7 +718,7 @@
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/aos.js"></script>
         <script src="js/jqueryUI.js"></script>
-        <script src="js/jquery.sticky.js"></script>
+        <script src="js/jquery.slicknav.min.js"></script>
 
         <!--Active & Custom JS-->
         <script src="js/main.js"></script>
