--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col order-1">
+                        <div class="col-auto order-1">
                             <div class="site-logo m-height text-center">
-                                <a href="#"><img src="img/logo.png" alt=""></a>
+                                <a href="#logo"><img src="img/logo.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col order-0 order-lg-2">
@@ -219,7 +219,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="payment-method d-flex align-items-center">
+                            <div class="payment-method d-flex align-items-center justify-content-center">
                                 <div class="switcher-text">
                                     <p>Cash Price</p>
                                 </div>
@@ -283,7 +283,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <div class="body-style-title d-flex justify-content-between">
+                        <div class="body-style-title d-flex justify-content-between align-items-start align-items-md-center">
                             <div class="section-title">
                                 <h2>choose your body style</h2>
                             </div>
@@ -646,7 +646,7 @@
                         </div>
                         <!-- newsletter-signup-section ends -->
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-sm-8 col-lg-5">
                         <!-- quick-links-section starts -->
                         <div class="quick-links-section d-flex justify-content-between">
                             <div class="single-quick-link">
@@ -672,9 +672,9 @@
                         </div>
                         <!-- quick-links-section ends -->
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-sm-4 col-lg-3">
                         <!-- footer-contact-section starts -->
-                        <div class="footer-contact-section d-flex d-lg-block float-right">
+                        <div class="footer-contact-section d-flex d-sm-block float-right">
                             <div class="single-footer-contact">
                                 <h5>Follow Us</h5>
                                 <a href="#" class="footer-facebook d-flex align-items-center">
@@ -693,11 +693,11 @@
                 <div class="row">
                     <div class="col">
                         <!-- footer-copyright-section starts -->
-                        <div class="footer-copyright-section d-flex justify-content-between align-items-center">
-                            <div class="footer-copyright-text">
+                        <div class="footer-copyright-section d-flex justify-content-center justify-content-md-between align-items-center flex-wrap flex-md-nowrap">
+                            <div class="footer-copyright-text order-1 order-md-0">
                                 <p>&copy; Copyright 2019 . Carter Motors  i  All Rights Reserved</p>
                             </div>
-                            <div class="autohq-logo">
+                            <div class="autohq-logo order-0 order-md-1">
                                 <a href="#"><img src="img/footerLogo.png" alt=""></a>
                             </div>
                         </div>
