--- a/index.html
+++ b/index.html
@@ -719,6 +719,9 @@
         <script src="js/aos.js"></script>
         <script src="js/jqueryUI.js"></script>
         <script src="js/jquery.slicknav.min.js"></script>
+        <script src="js/slick.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/jquery.sticky.js"></script>
 
         <!--Active & Custom JS-->
         <script src="js/main.js"></script>
