desktop version done

--- a/cardetails.html
+++ b/cardetails.html
@@ -16,7 +16,7 @@
         <script src="js/jquery-3.3.1.slim.min.js"></script>
         <script src="js/jquery-migrate-1.4.1.min.js"></script>
     </head>
-    <body data-spy="scroll" data-target="#navbar-example2">
+    <body data-spy="scroll" data-target="#sub-navbar" data-offset="180">
 
         <!-- header starts -->
         <div class="header">
@@ -338,41 +338,19 @@
         <div class="submenu-area">
             <div class="container">
                 <div class="row">
-                    <div id="navbar-example2" class="col-lg-12">
-            <ul>
-                <li class="smooth-menu"><a class="nav-link" href="#specification_section">Vehicle Specification</a></li>
-                <li class="smooth-menu"><a class="nav-link" href="#finance_section">Finance</a></li>
-                <li class="smooth-menu"><a class="nav-link" href="#testimonial_section">Customer Reviews</a></li>
-            </ul>
+                    <div id="sub-navbar" class="col-lg-12">
+                        <ul>
+                            <li class="smooth-menu list-one"><a class="nav-link active" href="#specification_section">Vehicle Specification</a></li>
+                            <li class="smooth-menu"><a class="nav-link" href="#finance_section">Finance</a></li>
+                            <li class="smooth-menu"><a class="nav-link" href="#testimonial_section">Customer Reviews</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
         <!-- submenu-area starts -->
-<!-- 
-        <nav id="navbar-example2" class="navbar navbar-light bg-light">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#fat">@fat</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#mdo">@mdo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#one">@mdo</a>
-                </li>
-            </ul>
-        </nav>
-        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-            <h4 id="fat">@fat</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda amet eos veritatis voluptas fugit laudantium consequatur dicta, nostrum reiciendis mollitia?</p></p>
-            <h4 id="mdo">@mdo</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda amet eos veritatis voluptas fugit laudantium consequatur dicta, nostrum reiciendis mollitia?</p>
-            <h4 id="one">one</h4>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda amet eos veritatis voluptas fugit laudantium consequatur dicta, nostrum reiciendis mollitia?</p>
-        </div> -->
 
-        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+        <div>
             <!-- .specification starts -->
             <div id="specification_section" class="specification-area">
                 <div class="container">
