--- a/cardetails.html
+++ b/cardetails.html
@@ -9,8 +9,7 @@
         
         <!--Theme specific styles-->
         <link href="css/compile.css" rel="stylesheet">
-        <link href="css/client.css" rel="stylesheet">
-        <link href="css/ion.rangeSlider.min.css" rel="stylesheet">
+        <!-- <link href="css/client.css" rel="stylesheet"> -->
         
         <!--Core jQuery-->
         <script src="js/jquery-3.3.1.slim.min.js"></script>
