--- a/cardetails.html
+++ b/cardetails.html
@@ -215,14 +215,14 @@
                                 </div>
                                 <!-- cost-details ends -->
                             </div>
-                            <div class="car-details-bottom d-flex justify-content-between align-items-center">
-                                <div class="share-section">
+                            <div class="car-details-bottom d-flex flex-column flex-lg-row justify-content-between align-items-center">
+                                <div class="share-section order-1 order-lg-0">
                                     <a href="#"><i class="fa fa-share-alt"></i> Share</a>
                                     <a href="#"><i class="fa fa-print"></i> Print</a>
                                     <a href="#"><i class="fa fa-heart"></i> favourite</a>
                                 </div>
                                 <!-- car-details-features icons starts -->
-                                <div class="car-details-features d-flex">
+                                <div class="car-details-features d-flex order-0 order-lg-1">
                                     <div class="single-car-details-feature d-flex align-items-end text-center">
                                         <span>
                                             <span class="dfeature-icon d-block">
@@ -544,7 +544,7 @@
                                 <div class="calculator-heading text-center">
                                     <p>You can adjust the options below to tailor a quote to suit your individual needs.</p>
                                 </div>
-                                <div class="calculator-dropdowns d-flex justify-content-between">
+                                <div class="calculator-dropdowns d-flex flex-wrap flex-lg-nowrap justify-content-between">
                                     <div class="single-dropdown">
                                         <label for="month"><span class="info-icon"><i class="fa fa-info"></i></span> Term (months)</label>
                                         <select name="month" id="month">
@@ -808,7 +808,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="finance-valuation-content">
-                                    <div class="finance-valuation-fields d-flex align-items-end">
+                                    <div class="finance-valuation-fields d-flex flex-wrap flex-lg-nowrap align-items-end">
                                         <div class="single-valuation-item val-title">
                                             <h4>Free Instant Car Valuation</h4>
                                         </div>
