--- a/cardetails.html
+++ b/cardetails.html
@@ -119,7 +119,7 @@
                         <div class="car-details-content">
                             <div class="d-block d-lg-flex">
                                 <!-- slick-slider-wrap starts -->
-                                <div class="slick-slider-wrap d-flex">
+                                <div class="slick-slider-wrap d-block d-md-flex">
                                     <div class="slider">
                                         <div class="single-car-item">
                                             <picture>
@@ -164,7 +164,7 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <div class="slider-nav-thumbnails d-flex flex-column justify-content-center">
+                                    <div class="slider-nav-thumbnails d-md-flex flex-column justify-content-center">
                                         <div class="single-car-item">
                                             <img src="img/cars/thumb-1.jpg" alt="One">
                                         </div>
@@ -208,7 +208,7 @@
                                             <img src="img/mercedes-logo.png" alt="">
                                         </div>
                                     </div>
-                                    <div class="details-btns mt-3">
+                                    <div class="details-btns mt-3 d-flex d-md-block">
                                         <a class="boxed-btn" href="#">Apply Now</a>
                                         <a class="boxed-btn enquire-btn" href="#">Enquire</a>
                                     </div>
@@ -216,7 +216,7 @@
                                 <!-- cost-details ends -->
                             </div>
                             <div class="car-details-bottom d-flex flex-column flex-lg-row justify-content-between align-items-center">
-                                <div class="share-section order-1 order-lg-0">
+                                <div class="share-section order-1 order-lg-0 d-flex d-sm-block">
                                     <a href="#"><i class="fa fa-share-alt"></i> Share</a>
                                     <a href="#"><i class="fa fa-print"></i> Print</a>
                                     <a href="#"><i class="fa fa-heart"></i> favourite</a>
@@ -294,8 +294,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="d-flex reserve-content">
-                            <div class="single-reserve-item reserve-one d-flex align-items-center">
+                        <div class="reserve-content d-flex flex-wrap flex-md-nowrap">
+                            <div class="single-reserve-item reserve-one d-flex align-items-center order-1 order-md-0">
                                 <span><img src="img/reserve-icon-1.png" alt=""></span>
                                 <span class="laptop"><img src="img/reserve-icon-2.png" alt=""></span>
                                 <h3><strong>Reserve</strong> Online</h3>
