listing page added

--- a/cardetails.html
+++ b/cardetails.html
@@ -989,5 +989,5 @@
 
         <!--Active & Custom JS-->
         <script src="js/main.js"></script>
-    </body data-spy="scroll" data-target="#navbar-example">
+    </body>
 </html>
