--- a/listing.html
+++ b/listing.html
@@ -1108,7 +1108,7 @@
                     </div>
                 </div>
                 <!-- .sortby-dropdown-wrap ends large-cards-->
-                <div class="listing-content-wrap ">
+                <div class="listing-content-wrap large-cards">
                     <div class="container">
                         <div class="row">
                             <div class="col">
