--- a/cardetails.html
+++ b/cardetails.html
@@ -94,6 +94,18 @@
 
         <div class="spacer d-block d-lg-none"></div>
 
+        <!-- alert-message-section starts || css in header.scss-->
+        <div class="alert-message-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <p>Please note we will close Christmas Eve at 1pm and reopen on Friday 27th. See our full <a href="#">Xmas opening hours</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- alert-message-section ends -->
+
         <!-- breadcrumb-area starts -->
         <div class="breadcrumb-area d-flex align-items-center">
             <div class="container">
@@ -187,15 +199,20 @@
                                 </div><!-- slick-slider-wrap ends -->
                                 <!-- cost-details starts -->
                                 <div class="car-details">
-                                    <div class="car-title mb-3 pb-2">
-                                        <h3>Mercedes </h3>
-                                        <p>Gla-class Gla 200 D Amg Line Premium </p>
+                                    <div class="car-title-wrap position-relative">
+                                        <div class="car-title mb-3 pb-3">
+                                            <h3>Mercedes </h3>
+                                            <p>Gla-class Gla 200 D Amg Line Premium </p>
+                                        </div>
+                                        <div class="mercedes-logo text-right">
+                                            <img src="img/mercedes-logo.png" alt="">
+                                        </div>
                                     </div>
                                     <div class="car-text mb-3">
                                         <h4>Premium Pack & 18" AMG Alloys</h4>
                                         <p>Mercedes-Benz GLA 200d Amg [Premium Pack] Automatic, South Sea Blue Metallic, Black Leather Suede Seats, Satellite Navigation, Reverse Camera, Climate Control, Folding Mirrors, CD Players, 18" AMG Alloys, 1 Owner, Full Service History, Only 32,000 Miles, RFL £20 </p>
                                     </div>
-                                    <div class="price-per-month d-flex justify-content-between align-items-center">
+                                    <div class="price-per-month">
                                         <div class="price-wrap">
                                             <span class="car-price">£17,495 </span>
                                             <div class="d-flex align-items-end">
@@ -203,9 +220,6 @@
                                                 <span class="monthly-cost">£1,597</span>
                                                 <span>Per Month</span>
                                             </div>
-                                        </div>
-                                        <div class="mercedes-logo">
-                                            <img src="img/mercedes-logo.png" alt="">
                                         </div>
                                     </div>
                                     <div class="details-btns mt-3 d-flex d-md-block">
