--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 
         <div class="spacer d-block d-lg-none"></div>
 
+        <!-- alert-message-section starts || css in header.scss-->
+        <div class="alert-message-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <p>Please note we will close Christmas Eve at 1pm and reopen on Friday 27th. See our full <a href="#">Xmas opening hours</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- alert-message-section ends -->
+
         <!-- homepage-slider-area starts -->
         <div class="homepage-slider-area">
             <div class="owl-carousel homepage-slides">
@@ -711,16 +723,16 @@
         <!--Libraries-->
         <script src="js/bootstrap.bundle.min.js"></script>       
 
-        <!--Plugins-->
-        <script src="js/perfect-scrollbar.jquery.min.js"></script>
-        <script src="js/jquery.nice-select.min.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/aos.js"></script>
-        <script src="js/jqueryUI.js"></script>
-        <script src="js/jquery.slicknav.min.js"></script>
-        <script src="js/slick.min.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
+         <!--Plugins-->
+         <script src="js/perfect-scrollbar.jquery.min.js"></script>
+         <script src="js/jquery.nice-select.min.js"></script>
+         <script src="js/owl.carousel.min.js"></script>
+         <script src="js/aos.js"></script>
+         <script src="js/jqueryUI.js"></script>
+         <script src="js/jquery.slicknav.min.js"></script>
+         <script src="js/slick.min.js"></script>
+         <script src="js/jquery.magnific-popup.min.js"></script>
+         <script src="js/jquery.sticky.js"></script>
 
         <!--Active & Custom JS-->
         <script src="js/main.js"></script>
